manual install from rpm removed